# api-request-auto

./: README.md
autorequest/: Cargo.toml
autorequest/data/: cities.json  countries.json  states.json
autorequest/src/: main.rs  txt.txt
