[package]
name = "autorequest"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15" # Opcional, si deseas usar variables de entorno
serde_json = "1.0"
